# Linux

./: README.md
Android/BaseUI/: README.md
Android/BaseUI/BottomDialogFragment/: settings.gradle.kts
Android/BaseUI/BottomDialogFragment/app/: build.gradle.kts
Android/BaseUI/BottomDialogFragment/app/src/main/: AndroidManifest.xml
Android/BaseUI/BottomDialogFragment/app/src/main/res/layout/: activity_main.xml  dialog_my_bottom_sheet.xml
Android/BaseUI/BottomDialogFragment/app/src/main/res/values/: strings.xml  themes.xml
Android/BaseUI/BottomDialogFragment/app/src/main/res/values-night/: themes.xml
Android/BaseUI/BottomDialogFragment/gradle/wrapper/: gradle-wrapper.properties
Android/BaseUI/BottomNavigation/app/: build.gradle.kts
Android/BaseUI/BottomNavigation/app/src/main/res/layout/: activity_main.xml
Android/BaseUI/BottomNavigation/app/src/main/res/menu/: navigation2.xml
Android/BaseUI/BottomNavigation/app/src/main/res/values/: colors.xml  strings.xml
Android/BaseUI/BottomNavigation/gradle/wrapper/: gradle-wrapper.properties
Android/BaseUI/CardView/app/: build.gradle.kts
Android/BaseUI/CardView/app/src/main/res/layout/: activity_main.xml
Android/BaseUI/CardView/app/src/main/res/values/: strings.xml  themes.xml
Android/BaseUI/CardView/gradle/wrapper/: gradle-wrapper.properties
Android/BaseUI/DividerView/: settings.gradle.kts
Android/BaseUI/DividerView/app/: build.gradle.kts
Android/BaseUI/DividerView/app/src/main/: AndroidManifest.xml
Android/BaseUI/DividerView/app/src/main/res/drawable/: shape_divider_linear.xml
Android/BaseUI/DividerView/app/src/main/res/layout/: activity_main.xml
Android/BaseUI/DividerView/app/src/main/res/values/: strings.xml  themes.xml
Android/BaseUI/DividerView/app/src/main/res/values-night/: themes.xml
Android/BaseUI/DividerView/gradle/wrapper/: gradle-wrapper.properties
Android/BaseUI/MaterialButton/: settings.gradle.kts
Android/BaseUI/MaterialButton/app/: build.gradle.kts
Android/BaseUI/MaterialButton/app/src/main/: AndroidManifest.xml
Android/BaseUI/MaterialButton/app/src/main/res/layout/: activity_main.xml
Android/BaseUI/MaterialButton/app/src/main/res/values/: strings.xml  themes.xml
Android/BaseUI/MaterialButton/app/src/main/res/values-night/: themes.xml
Android/BaseUI/MaterialButton/gradle/wrapper/: gradle-wrapper.properties
Android/BaseUI/RecyclerViewDemo/app/: build.gradle.kts
Android/BaseUI/RecyclerViewDemo/app/src/main/res/drawable/: item_background.xml
Android/BaseUI/RecyclerViewDemo/app/src/main/res/layout/: activity_main.xml  item_view.xml
Android/BaseUI/RecyclerViewDemo/gradle/wrapper/: gradle-wrapper.properties
Android/BaseUI/RefreshDemo/: settings.gradle.kts
Android/BaseUI/RefreshDemo/app/: build.gradle.kts
Android/BaseUI/RefreshDemo/app/src/main/: AndroidManifest.xml
Android/BaseUI/RefreshDemo/app/src/main/res/layout/: activity_main.xml
Android/BaseUI/RefreshDemo/app/src/main/res/values/: themes.xml
Android/BaseUI/RefreshDemo/app/src/main/res/values-night/: themes.xml
Android/BaseUI/RefreshDemo/gradle/wrapper/: gradle-wrapper.properties
Android/BaseUI/Snackbar/app/: build.gradle.kts
Android/BaseUI/Snackbar/app/src/main/: AndroidManifest.xml
Android/BaseUI/Snackbar/app/src/main/res/layout/: activity_main.xml
Android/BaseUI/Snackbar/gradle/wrapper/: gradle-wrapper.properties
Android/BaseUI/TextInputLine/: settings.gradle.kts
Android/BaseUI/TextInputLine/app/: build.gradle.kts
Android/BaseUI/TextInputLine/app/src/main/: AndroidManifest.xml
Android/BaseUI/TextInputLine/app/src/main/res/layout/: activity_main.xml
Android/BaseUI/TextInputLine/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/BaseUI/TextInputLine/app/src/main/res/values-night/: themes.xml
Android/BaseUI/TextInputLine/gradle/wrapper/: gradle-wrapper.properties
Android/Fragment/01_Fragment/Demo/app/src/main/: AndroidManifest.xml
Android/Fragment/01_Fragment/Demo/app/src/main/res/layout/: activity_main.xml  home_fragment.xml  setting_fragment.xml
Android/Fragment/03_Fragment_Glide/Demo/app/: build.gradle.kts
Android/Fragment/03_Fragment_Setting_Preference_UI/Demo/gradle/wrapper/: gradle-wrapper.properties
Android/Fragment/04_Fragment_Setting_UI/: README.md
Android/Fragment/04_Fragment_Setting_UI/Demo/app/: build.gradle.kts
Android/Fragment/04_Fragment_Setting_UI/Demo/app/src/main/: AndroidManifest.xml
Android/Fragment/05_Fragment_Setting_Preference_UI/: README.md
Android/Fragment/06_Fragment_Toolbar_Menu_UI/Demo/app/: build.gradle.kts
ESP32/Assistant/: Assistant.ino  Config.h  images.h
ESP32/Camera/: Camera.ino
ESP32/serial-lora/: serial_lora.ino
ESP32/serial-lora/demo/: CMakeLists.txt  README.md  main.cpp  receiver.cpp  sender.cpp
ESP32/wifi/: images.h  wifi.ino
app/01_char_driver_test/: main.cpp
app/01_sample/: CMakeLists.txt  main.cpp
app/02_frambuffer_test/: CMakeLists.txt  main.cpp
app/03_rtc_test/: main.cpp
app/04_watchdog_test/: CMakeLists.txt  main.cpp
app/05_ndk_test/: CMakeLists.txt  VideoTimingCalculator.cpp  VideoTimingCalculator.h  build.sh  main.cpp
app/05_ndk_test/include/: nlog.h
app/06_video_timing_caculator/: CMakeLists.txt  VLog.h  VideoTimingCalculator.cpp  VideoTimingCalculator.h  main.cpp
app/06_video_timing_caculator/config/: vic_timings copy.json
app/06_video_timing_caculator/doc/: video_timings_calculator.html
app/07_google_test/: CMakeLists.txt
app/07_google_test/include/log/: log.h
app/07_google_test/include/video/: video.h
app/07_google_test/src/: CMakeLists.txt  main.cpp
app/07_google_test/src/video/: video.cpp
app/07_google_test/test/: CMakeLists.txt  test_main.cpp
app/09_udp_echo_test/: CMakeLists.txt  client.cpp  server.cpp
app/10_spdlog_test/: CMakeLists.txt  main.cpp
app/11_i2c_operation/: CMakeLists.txt  i2c.cpp  i2c.h  main.cpp
char/01_simple/: Makefile  hello.c
config/: commit.template
drivers/01_char/: Makefile  hello.c
drivers/02_spi/: Makefile  README  README.md  app.c  mcp2515.c
(+42 files in other folders)
